add some swaggg

--- a/server/server.html
+++ b/server/server.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="server.css">
 </head>
 <body>
-    <a href="frequencemax.html" >
+    <a href="anomalies.html" >
+        <button id="anomalies">Anomalies</button>
     </a>
-    <a href="puissance.html" >
+    <a href="devices.html" >
+        <button id="devices">Devices</button>
     </a>
     <button id="amp">Amplitude Maximale</button>
     <button id="pui">Puissance</button>
