amelioration barre laterale menu

--- a/server/server.html
+++ b/server/server.html
@@ -16,11 +16,15 @@
         <button id="amp">Amplitude Maximale</button>
         <button id="pui">Puissance</button>
         <button id="frqmax" >Frequence Maximale</button>    
+        
         <a href="anomalies.html" >
             <button id="anomalies">Anomalies</button>
         </a>
         <a href="devices.html" >
             <button id="devices">Devices</button>
+        </a>
+        <a href="parametre.html" >
+            <button id="para">Setting</button>
         </a></div>
     
 
