--- a/server/server.html
+++ b/server/server.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="server.css">
 </head>
 <body>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgpX5bLYHeHbQ3X2iCRLfyovvP_mA1B-6u6B0BhuCyZg&s" alt="image Rincent" height= 120>
     
     <div id="puissancex">
         <canvas id="graphique1" width="40" height="30"></canvas>
@@ -21,7 +20,8 @@
    
 
     <div id=menu>
-        
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgpX5bLYHeHbQ3X2iCRLfyovvP_mA1B-6u6B0BhuCyZg&s" alt="image Rincent" height= 120 width="150">
+
         <button id="amp">Amplitude Maximale</button>
         <button id="pui">Puissance</button>
         <button id="frqmax" >Frequence Maximale</button>    
