bouton ampli, frq et puissance fonctionnel

--- a/server/pui.html
+++ b/server/pui.html
@@ -40,7 +40,7 @@
         </a>
        
         <a href="frqmax.html" >
-            <button id="frqmax" >Frequence Maximale</button>    
+            <button id="frqmax">Frequence Maximale</button>    
         </a>
 
         <a href="anomalies.html" >
@@ -58,7 +58,7 @@
         <tr id="titleline"> <td>Appareils</td> <td>État</td> </tr>
     </table >
  
-    <script src ="server.js"></script>
+    <script src ="pui.js"></script>
    
 </body>
 </html>
