setting of readlogManager

--- a/server/pui.html
+++ b/server/pui.html
@@ -58,7 +58,7 @@
         <tr id="titleline"> <td>Appareils</td> <td>État</td> </tr>
     </table >
  
-    <script src ="pui.js"></script>
-   
+    <script type="module"src ="pui.js"></script>
+    <script  type="module" src ="readLogManager.js"></script>
 </body>
 </html>
