--- a/server/server.html
+++ b/server/server.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     
-    
     <div id="axex">
         <canvas id="graphique1" width="20" height="10"></canvas>
     </div>
@@ -58,7 +57,9 @@
         <tr id="titleline"> <td>Appareils</td> <td>État</td> </tr>
     </table >
  
-    <script src ="server.js"></script>
-   
+    <script  type="text/html" src ="server.js"></script>
+
+
+
 </body>
 </html>
