add clickable EUI device

--- a/server/devices.html
+++ b/server/devices.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-    <div id="dynamic-list-container" class="list-appareils">
-        <h2>Appareils</h2>
+    <div id="dynamic-device-list" class="list-appareils">
+        <h2>Liste des appareils</h2>
     </div>
 
     <div id=menu>
@@ -35,8 +35,11 @@
         </a>
     </div>
 
-<script type="module" src="devices.js"></script>
+    <div id="device-info" class="device-info">
+        <h2>Pas d'appareil sélectionné</h2>
+    </div>
 
+    <script type="module" src="devices.js"></script>
     
 </body>
 </html>
