add device information when selected

--- a/server/devices.html
+++ b/server/devices.html
@@ -36,7 +36,7 @@
     </div>
 
     <div id="device-info" class="device-info">
-        <h2>Pas d'appareil sélectionné</h2>
+        <h2 id="device-selection">Pas d'appareil sélectionné</h2>
     </div>
 
     <script type="module" src="devices.js"></script>
