--- a/server/frqmax.html
+++ b/server/frqmax.html
@@ -58,7 +58,6 @@
         <tr id="titleline"> <td>Appareils</td> <td>État</td> </tr>
     </table >
  
-    <script src ="frqmax.js"></script>
-   
+    <script type ="module" src ="frqmax.js"></script>   
 </body>
 </html>
