--- a/server/devices.html
+++ b/server/devices.html
@@ -6,11 +6,16 @@
     <title>Appareils</title>
     <link rel="stylesheet" href="server.css">
     <link rel="stylesheet" href="devices.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
     <div id="dynamic-device-list" class="list-appareils">
         <h2>Liste des appareils</h2>
+    </div>
+
+    <div class="device-chart">
+        <canvas id="average-chart"></canvas>
     </div>
 
     <div id=menu>
