--- a/server/devices.html
+++ b/server/devices.html
@@ -7,16 +7,11 @@
     <link rel="stylesheet" href="server.css">
     <link rel="stylesheet" href="devices.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment"></script>
+    <script type="module" src="devices.js"></script>
 </head>
 <body>
-
-    <div id="dynamic-device-list" class="list-appareils">
-        <h2>Liste des appareils</h2>
-    </div>
-
-    <div class="device-chart">
-        <canvas id="average-chart"></canvas>
-    </div>
 
     <div id=menu>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgpX5bLYHeHbQ3X2iCRLfyovvP_mA1B-6u6B0BhuCyZg&s" alt="image Rincent" height= 120 width="160">
@@ -40,11 +35,15 @@
         </a>
     </div>
 
-    <div id="device-info" class="device-info">
-        <h2 id="device-selection">Pas d'appareil sélectionné</h2>
+    <div id="dynamic-device-list" class="dynamic-device-list">
+        <h2>Liste des appareils</h2>
     </div>
 
-    <script type="module" src="devices.js"></script>
+    <div id="device-info" class="device-info">
+        <h2 id="selected-device">Pas d'appareil sélectionné</h2>
+        <p id="selected-device-last-connection"></p>
+        <canvas id="average-chart"></canvas>
+    </div>
     
 </body>
 </html>
