added GPS infos of devices

--- a/server/devices.html
+++ b/server/devices.html
@@ -42,6 +42,7 @@
     <div id="device-info" class="device-info">
         <h2 id="selected-device">Pas d'appareil sélectionné</h2>
         <p id="selected-device-last-connection"></p>
+        <p id="selected-device-coordinates"></p>
         <canvas id="average-chart"></canvas>
     </div>
     
