maj interface: ajout des liens cliquable en bas à droite, changement de méthode pour prise de donnée

--- a/server/puissance.html
+++ b/server/puissance.html
@@ -36,10 +36,13 @@
         <a href="devices.html" >
             <button>Appareils</button>
         </a>
+        <a href="mesures.html" >
+            <button>Mesures détaillées</button>
+        </a>
     </div>
         
     <table id="tabdevice">
-        <tr id="titleline"> <td>Appareils</td> <td>État</td> </tr>
+        <tr id="titleline"> <td>Appareils</td></tr>
     </table >
  
 </body>
