--- a/server/devices.html
+++ b/server/devices.html
@@ -27,6 +27,9 @@
         <a href="devices.html" >
             <button id="selectedButton">Appareils</button>
         </a>
+        <a href="mesures.html" >
+            <button>Mesures détaillées</button>
+        </a>
     </div>
 
     <div id="dynamic-device-list" class="dynamic-device-list">
