maj cloud point

--- a/server/mesures.html
+++ b/server/mesures.html
@@ -30,14 +30,13 @@
             <button>Amplitude Maximale</button>
         </a> 
         <a href="frequence.html" >
-            <button id="selectedButton">Fréquence Maximale</button>    
+            <button>Fréquence Maximale</button>
         </a>
         <a href="devices.html" >
             <button>Appareils</button>
         </a>
         <a href="mesures.html" >
-            <button>Mesures détaillées</button>
-        </a>
+            <button id="selectedButton">Mesures Détaillées</button>           </a>
     </div>
 
 </body>
