maj mesure detaillée: correction bug

--- a/server/amplitude.html
+++ b/server/amplitude.html
@@ -36,7 +36,7 @@
             <button>Appareils</button>
         </a>
         <a href="mesures.html" >
-            <button>Mesures détaillées</button>
+            <button>Mesures Détaillées</button>
         </a>
     </div>
         
