--- a/server/devices.html
+++ b/server/devices.html
@@ -28,7 +28,7 @@
             <button id="selectedButton">Appareils</button>
         </a>
         <a href="mesures.html" >
-            <button>Mesures détaillées</button>
+            <button>Mesures Détaillées</button>
         </a>
     </div>
 
