--- a/server/mesures.html
+++ b/server/mesures.html
@@ -6,18 +6,14 @@
     <title>Mesures detaillées</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type ="module" src ="mesures.js"></script> 
-    <link rel="stylesheet" href="graph.css">
+    <link rel="stylesheet" href="measures.css">
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
 
-    <div id="axex">
+    <div class="graph">
         <canvas id="graphique1" width="20" height="10"></canvas>
-    </div>
-    <div id="axey">
         <canvas id="graphique2" width="20" height="10"></canvas>    
-    </div>
-    <div id="axez">
         <canvas id="graphique3" width="20" height="10"></canvas>    
     </div>
  
