--- a/server/puissance.html
+++ b/server/puissance.html
@@ -37,7 +37,7 @@
             <button>Appareils</button>
         </a>
         <a href="mesures.html" >
-            <button>Mesures détaillées</button>
+            <button>Mesures Détaillées</button>
         </a>
     </div>
         
