maj: ajout de puissance, et frqmax dans mesures detaillées

--- a/server/mesures.html
+++ b/server/mesures.html
@@ -6,7 +6,7 @@
     <title>Mesures detaillées</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type ="module" src ="mesures.js"></script> 
-    <link rel="stylesheet" href="measures.css">
+    <link rel="stylesheet" href="mesures.css">
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
@@ -14,7 +14,14 @@
     <div class="graph">
         <canvas id="graphique1" width="20" height="10"></canvas>
         <canvas id="graphique2" width="20" height="10"></canvas>    
-        <canvas id="graphique3" width="20" height="10"></canvas>    
+        <canvas id="graphique3" width="20" height="10"></canvas>   
+        <canvas id="graphique4" width="20" height="10"></canvas>    
+        <canvas id="graphique5" width="20" height="10"></canvas>    
+        <canvas id="graphique6" width="20" height="10"></canvas>   
+        <canvas id="graphique7" width="20" height="10"></canvas>    
+        <canvas id="graphique8" width="20" height="10"></canvas>    
+        <canvas id="graphique9" width="20" height="10"></canvas>    
+ 
     </div>
  
     <div class=menu>
