--- a/server/puissance.html
+++ b/server/puissance.html
@@ -37,8 +37,10 @@
         </a>
     </div>
         
-    <table id="tabdevice">
-        <tr class="titleline"><td>Appareils</td><td>X</td><td>Y</td><td>Z</td></tr>
+    <table id="tabdevice" class="tableDevice">
+        <thead>
+            <tr><td>Appareils</td><td>X</td><td>Y</td><td>Z</td></tr>
+        </thead>
     </table>
  
 </body>
