Improved bar chart code

--- a/server/amplitude.html
+++ b/server/amplitude.html
@@ -12,9 +12,9 @@
 <body>
      
     <div class="graph">
-        <canvas id="graphique1"></canvas>
-        <canvas id="graphique2"></canvas>
-        <canvas id="graphique3"></canvas>
+        <canvas id="chartX"></canvas>
+        <canvas id="chartY"></canvas>
+        <canvas id="chartZ"></canvas>
     </div>
   
     <div class="menu">
