changed device list to downlink list on bar chart and added a searchbar

--- a/server/puissance.html
+++ b/server/puissance.html
@@ -37,11 +37,10 @@
         </a>
     </div>
         
-    <table id="tabdevice" class="tableDevice">
-        <thead>
-            <tr><td>Appareils</td><td>X</td><td>Y</td><td>Z</td></tr>
-        </thead>
-    </table>
+    <div id="dynamic-downlink-list" class="dynamic-downlink-list">
+        <h2>Liste des données reçues</h2>
+        <input type="text" id="searchInput" placeholder="Chercher...">
+    </div>
  
 </body>
 </html>
