--- a/server/mesures.html
+++ b/server/mesures.html
@@ -24,22 +24,22 @@
  
     </div>
  
-    <div class=menu>
-        <img src="./img/logo-rincent.png" alt="Logo Rincent">
-        <a href="puissance.html" >
-            <button>Puissance</button>
+    <div class="menu">
+        <a href="home.html">
+            <img src="./img/logo-rincent.png" alt="Logo Rincent">
         </a>
-        <a href="amplitude.html" >
-            <button>Amplitude Maximale</button>
-        </a> 
-        <a href="frequence.html" >
-            <button>Fréquence Maximale</button>
+        <a href="home.html" >
+            <button>Accueil</button>
         </a>
-        <a href="devices.html" >
+        <a href="devices.html">
             <button>Appareils</button>
         </a>
-        <a href="mesures.html" >
-            <button id="selectedButton">Mesures Détaillées</button>           </a>
+        <a href="barChart.html">
+            <button>Diagrammes en barre</button>
+        </a>
+        <a href="mesures.html">
+            <button id="selectedButton">Mesures Détaillées</button>
+        </a>
     </div>
 
 </body>
