ajout position et devices connectés dans l'acceuil

--- a/server/barChart.html
+++ b/server/barChart.html
@@ -17,6 +17,7 @@
             <input type="text" id="searchInput" placeholder="Chercher...">
         </div>
         <canvas id="power"></canvas>
+        <canvas id="magnitudeX"></canvas>
         <canvas id="magnitudeY"></canvas>
         <canvas id="magnitudeZ"></canvas>
     </div>
