--- a/server/home.html
+++ b/server/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
+    <script type="module" src ="home.js"></script>
     <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
  
@@ -24,6 +26,21 @@
         <a href="mesures.html">
             <button>Mesures Détaillées</button>
         </a>
+    </div>
+    
+    <div class="meteo">
+        <p id="position"></p>
+        <p id="wind"></p>
+    </div>
+
+    <div class="devicePart">
+        <p id="deviceConnected"></p>
+        <p id="deviceDisconnected"></p>
+    </div>
+
+    <div class="scorePart">
+        <p id="score"></p>
+        <p id="scoreDevice"></p>
     </div>
  
 </body>
